2002-08-08  Derek Price  <oberon@umich.edu>

	* import.c (import): Surrounded `server_active' with
	#ifdef SERVER_SUPPORT/#endif.
	* commit.c (commit_fileproc, commit_direntproc): Likewise.
	(Patch from John Tytgat  <John.Tytgat@aaug.net>.)

2002-07-31  Derek Price  <oberon@umich.edu>

	* filesubr.c: Add a line so VIM can determine tab stops and shift widths.
	* root.c: Ditto.
	* (parse_cvsroot): Add comments and tidy slightly.

2002-07-31  Derek Price  <oberon@umich.edu>

	* sanity.sh: Add another date to the comment about rcs2-7 failing.

2002-07-26  Jim Meyering  <meyering@lucent.com>

	* commit.c (find_fileproc): When committing in client mode,
	arrange to fail if a `cvs add'ed file no longer exists in the
	working directory.
	* sanity.sh (commit-add-missing): New test for above.

2002-07-25  Larry Jones  <lawrence.jones@eds.com>

	* sanity.sh: Set $TMPDIR if it's not already set and use it rather
	than /tmp for the expected server temp directory path.

2002-07-09  Larry Jones  <lawrence.jones@eds.com>

	* vers_ts.c (time_stamp_server, time_stamp): Eliminate unneeded
	struct_tm copying.

	* lock.c (lock_wait, lock_obtained): Display time in UTC if possible
	to reduce confusion in client/server mode.
	(Original patch from Eduardo Perez Ureta <eperez@it.uc3m.es>.)

2002-06-26  Larry Jones  <lawrence.jones@eds.com>

	* tag.c (check_fileproc): When checking up-to-date, T_REMOVE_ENTRY
	is also a valid status.
	(Reported by David Everly <David.Everly@wcom.com>.)
	* sanity.sh (tagc): New tests for above.

2002-06-18  Larry Jones  <lawrence.jones@eds.com>

	* update.c (patch_file): Don't patch if diff bigger than file.
	Don't bother adjusting the permission on the diff output if
	we're not going to use it.


2002-06-18  Derek Price  <oberon@umich.edu>

	* server.c: Handle HPUX password expiration fields in the passwd
	string in case we are set up on a server with NIS passwords served
	from HPUX.
	(Original patch from John Cavanaugh <john_cavanaugh@agilent.com>.)
