@@ -1,3 +1,9 @@
+2002-08-13  Derek Price  <oberon@umich.edu>
+
+	* client.c: Fix typo in comment.  Add comments.
+	* server.c: Fix a FIXME.  Remove an errant "const" directive.  Remove
+	some redundant memory allocation and error handling code.
+
 2002-08-08  Derek Price  <oberon@umich.edu>
 
 	* import.c (import): Surrounded `server_active' with
